<resources>
    <string name="app_name">Blood Donor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="atachiz02_softwares">Atachiz02 Softwares</string>
    <string name="blood">Blood Donor</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="appicon">appIcon</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="registered">Already registered? Click here to login…</string>
    <string name="home">Home</string>
    <string name="search">Search by state…</string>
    <string name="todo">TODO</string>
    <string name="create_profile">Create Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="nill"> </string>
    <string name="create">Create</string>
    <string name="your_name">Your name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_address">Your address</string>
    <string name="nationality">Nationality</string>
    <string name="postal_code">Postal code</string>
    <string name="phone_number">Phone number</string>
    <string name="roles">Donor/Recipient/Blood bank?</string>
    <string name="blood_group">Your blood group</string>
    <string name="genotype">Your genotype</string>
    <string name="state">State</string>
    <string name="contact">Contact</string>
    <string name="login">Login</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="address">Address:</string>
    <string name="post_code">Postal Code:</string>
    <string name="gender">Gender:</string>
    <string name="role">Role:</string>
    <string name="genetype">Genotype:</string>
    <string name="version">Version 1.0</string>
    <string name="about_info">Blood is a revolutionary mobile app that seamlessly connects blood donors, recipients and blood banks, transforming the way we approach blood donation and reception. With user-friendly features such as donor registration, real-time database, geolocation services, secure communication channels, donation analytics, rewards, and educational resources, Blood streamlines the process, ensuring a reliable and efficient blood supply. Download and share Blood today and join the united community dedicated to saving lives through the power of mobile technology.</string>
</resources>