<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Activities.SignInActivity">

    <ImageView
        android:id="@+id/signInIcon"
        android:layout_width="176dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/appicon"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInIcon"
        android:layout_centerHorizontal="true"
        android:text="@string/blood"
        android:textColor="#B40300"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInTitle"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/textbox_outline"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupEmail"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/textbox_outline"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/signupConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/textbox_outline"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/signupProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/signupSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/sign_up"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/signupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupSignUp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/registered"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="italic" />

<!--    <de.hdodenhof.circleimageview.CircleImageView-->
<!--        android:id="@+id/signInGoogle"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_below="@+id/signupLogin"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:elevation="10dp"-->
<!--        android:src="@drawable/google" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/atachiz02_softwares"
        android:textColor="#FF3D00"
        android:textSize="14sp"
        android:textStyle="italic" />

</RelativeLayout>