<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:collapsedTitleTextAppearance="@string/view_profile"
            app:expandedTitleTextAppearance="@string/nill"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title=""
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/viewProfileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <ImageView
                android:id="@+id/viewProfilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:background="@drawable/top_round_corners">

        <TextView
            android:id="@+id/viewProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfileLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileName"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/viewProfileBloodGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileLocation"
            android:layout_centerHorizontal="true"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/viewProfileBloodGroup"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/red"
            android:padding="10dp" />

        <TextView
            android:id="@+id/viewProfileAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewProfileAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileAddr"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfileZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileAddress"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/post_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewProfilePostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileZip"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfileSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfilePostalCode"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewProfileGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileSex"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfileRl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileGender"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/role"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewProfileRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileRl"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfileGene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileRole"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/genetype"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewProfileGenotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewProfileGene"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/viewProfileFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:icon="@drawable/round_keyboard_arrow_up_24"
            app:iconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/viewProfileFabCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/viewProfileFab"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_call_24"
            android:tintMode="@color/white"
            app:fabSize="normal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/viewProfileFabSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/viewProfileFabCall"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_chat_24"
            android:tintMode="@color/white"
            app:fabSize="normal" />
    </RelativeLayout>

</RelativeLayout>